[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdr-document-viewer"
version = "1.0.0"
requires-python = ">=3.8,<3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pillow>=9.0.0",
    "pandas>=1.3.0",
    "sqlalchemy>=1.4.0",
    "pyodbc>=4.0.0",
    "numpy>=1.20.0",
    "opencv-python-headless>=4.8.0",
    "ollama>=0.1.0",
    "snowflake-connector-python>=3.0.0",
    "snowflake-sqlalchemy>=1.4.0",
    "requests>=2.28.0",
]